--- a/src/main/resources/templates/students.html
+++ b/src/main/resources/templates/students.html
@@ -22,30 +22,37 @@
     <div class="container">
         <div class="row">
             <h1>Lista de Estudiantes</h1>
-            <table class="table table-striped table-bordered">
-                <thead class="table-dark">
-                    <tr>
-                        <th>Estudiante ID</th>
-                        <th>Nombres</th>
-                        <th>Apellidos</th>
-                        <th>Email</th>
-                        <th>Acciones</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr th:each="student : ${students}">
-                        <td th:text="${student.studentId}"></td>
-                        <td th:text="${student.name}"></td>
-                        <td th:text="${student.lastName}"></td>
-                        <td th:text="${student.email}"></td>
-                        <td>
-                            <a th:href="@{/students/edit/{id}(id=${student.studentId})}" class="btn btn-info">Editar</a>
-                            <a th:href="@{/students/delete/{id}(id=${student.studentId})}" class="btn btn-danger">Eliminar</a>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
         </div>
+
+        <div class="row">
+            <div class="col-lg-3">
+                <a th:href="@{/students/register}" class="btn btn-primary btn-sm mb3">Registrar Nuevo Estudiante</a>
+            </div>
+        </div>
+        <br/>
+        <table class="table table-striped table-bordered">
+            <thead class="table-dark">
+                <tr>
+                    <th>Estudiante ID</th>
+                    <th>Nombres</th>
+                    <th>Apellidos</th>
+                    <th>Email</th>
+                    <th>Acciones</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr th:each="student : ${students}">
+                    <td th:text="${student.studentId}"></td>
+                    <td th:text="${student.name}"></td>
+                    <td th:text="${student.lastName}"></td>
+                    <td th:text="${student.email}"></td>
+                    <td>
+                        <a th:href="@{/students/edit/{id}(id=${student.studentId})}" class="btn btn-info">Editar</a>
+                        <a th:href="@{/students/delete/{id}(id=${student.studentId})}" class="btn btn-danger">Eliminar</a>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
     </div>
 </body>
 
