--- a/src/main/resources/templates/register_student.html
+++ b/src/main/resources/templates/register_student.html
@@ -14,8 +14,7 @@
 <body>
     <nav class="navbar navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Home</a>
-            <span class="navbar-brand mb-0 h1">Control de Estudiantes</span>
+            <a class="navbar-brand" th:href="@{/students}">Home</a>
         </div>
     </nav>
 
