--- a/src/main/resources/templates/students.html
+++ b/src/main/resources/templates/students.html
@@ -46,7 +46,7 @@
                     <td th:text="${student.lastName}"></td>
                     <td th:text="${student.email}"></td>
                     <td>
-                        <a th:href="@{/students/edit/{id}(id=${student.studentId})}" class="btn btn-info">Editar</a>
+                        <a th:href="@{/students/edit/{id}(id=${student.studentId})}" class="btn btn-info">Actualizar</a>
                         <a th:href="@{/students/delete/{id}(id=${student.studentId})}" class="btn btn-danger">Eliminar</a>
                     </td>
                 </tr>
